[gd_scene load_steps=30 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://City_Tilemap/CCity_mockup.png" type="Texture" id=2]
[ext_resource path="res://City_Tilemap/lost.png" type="Texture" id=3]
[ext_resource path="res://City_Tilemap/nuvem-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://City_Tilemap/van.png" type="Texture" id=5]
[ext_resource path="res://Popup.png" type="Texture" id=6]
[ext_resource path="res://home.png" type="Texture" id=7]
[ext_resource path="res://Caixa.png" type="Texture" id=8]
[ext_resource path="res://Van.gd" type="Script" id=9]
[ext_resource path="res://Instruc√µes.png" type="Texture" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 608, 128, 32, 128, 32, 64, 608, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 32, 64, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 32, 64, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 64, 64, 0, 64, 0, 32, 64, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 0, 64, 0, 32, 64, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 64, 0, 64, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 128, 160, 0, 160, 0, 128, 128, 128 )

[sub_resource type="TileSet" id=3]
0/name = "CCity_mockup.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -32, 128, 608, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "CCity_mockup.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "CCity_mockup.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 352, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "CCity_mockup.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 416, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "CCity_mockup.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 96, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "CCity_mockup.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 160, 96, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "CCity_mockup.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 480, 64, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "CCity_mockup.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 256, 64, 32, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "CCity_mockup.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 192, 96, 64, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "lost.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 64, 128, 160 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "CCity_mockup.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 32, -32, 32, 160 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "nuvem-removebg-preview.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 320, 96, 128, 96 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "nuvem-removebg-preview.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 192, 192, 128, 96 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "nuvem-removebg-preview.png 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 32, 320, 288, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "nuvem-removebg-preview.png 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 32, 128, 96, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "CCity_mockup.png 15"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 576, 128, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 17 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 21.5, 8 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 10, 21 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 5, 17 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 3.0
margin_right = 1036.0
margin_bottom = 419.0
color = Color( 0.639216, 0.737255, 0.968627, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -4.0
margin_top = 411.0
margin_right = 1055.0
margin_bottom = 542.0
color = Color( 0.215686, 0.580392, 0.431373, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 7, 12, 0, 16, 11, 0, 65537, 11, 0, 131084, 12, 0, 131094, 13, 0, 262150, 14, 0, 262161, 14, 0, 327689, 11, 0, 393217, 14, 0, 393236, 14, 0, 393242, 11, 0, 458756, 12, 0, 524299, 13, 0, 524311, 12, 0, 655388, 9, 0, 851970, 7, 0, 851971, 1, 0, 851973, 2, 0, 851975, 3, 0, 851980, 6, 0, 851984, 7, 0, 851986, 7, 0, 851987, 3, 0, 851989, 7, 0, 851990, 2, 0, 851992, 1, 0, 851995, 7, 0, 917504, 8, 0, 917513, 4, 0, 917514, 4, 0, 917515, 5, 0, 917518, 8, 0, 917521, 5, 0, 917530, 4, 0, 983040, 0, 0, 983059, 0, 0, 1048576, 15, 0, 1048578, 15, 0, 1048581, 15, 0, 1048584, 15, 0, 1048587, 15, 0, 1048591, 15, 0, 1048594, 15, 0, 1048596, 15, 0, 1048600, 15, 0, 1048602, 15, 0, 1048607, 15, 0 )

[node name="Van" type="KinematicBody2D" parent="."]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Van"]
position = Vector2( 33, 494 )
scale = Vector2( 0.160131, 0.160131 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Van"]
position = Vector2( 32.5, 496 )
shape = SubResource( 13 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -8, 496 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Home" type="Button" parent="."]
margin_left = 952.0
margin_top = 8.0
margin_right = 1028.0
margin_bottom = 78.0
icon = ExtResource( 7 )
flat = true

[node name="caixa1" type="Area2D" parent="."]
position = Vector2( 288, 512 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="caixa1"]
position = Vector2( -20, -16 )
shape = SubResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="caixa1"]
position = Vector2( -20, -20 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="caixa2" type="Area2D" parent="."]
position = Vector2( 568, 512 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="caixa2"]
position = Vector2( -20, -16 )
shape = SubResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="caixa2"]
position = Vector2( -20, -20 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="caixa3" type="Area2D" parent="."]
position = Vector2( 824, 512 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="caixa3"]
position = Vector2( -20, -16 )
shape = SubResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="caixa3"]
position = Vector2( -20, -20 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 1032, 480 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 0, 11 )
shape = SubResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="Caixa" type="Sprite" parent="."]
modulate = Color( 0.176471, 0.176471, 0.176471, 1 )
position = Vector2( 728, 40 )
scale = Vector2( 0.75, 0.875 )
texture = ExtResource( 8 )

[node name="Caixa2" type="Sprite" parent="."]
modulate = Color( 0.180392, 0.180392, 0.180392, 1 )
position = Vector2( 792, 40 )
scale = Vector2( 0.75, 0.875 )
texture = ExtResource( 8 )

[node name="Caixa3" type="Sprite" parent="."]
modulate = Color( 0.211765, 0.211765, 0.211765, 1 )
position = Vector2( 856, 40 )
scale = Vector2( 0.75, 0.875 )
texture = ExtResource( 8 )

[node name="Popup" type="Popup" parent="."]
margin_left = 984.0
margin_top = 488.0
margin_right = 1024.0
margin_bottom = 528.0

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( -432, -256 )
scale = Vector2( 1.44774, 1.44774 )
texture = ExtResource( 6 )

[node name="Fim" type="Area2D" parent="."]
position = Vector2( 984, 488 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fim"]
position = Vector2( -5, 7 )
shape = SubResource( 23 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 146, 148 )
scale = Vector2( 1.74, 1.74 )
texture = ExtResource( 10 )

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="body_entered" from="caixa1" to="." method="_on_caixa1_body_entered"]
[connection signal="body_shape_entered" from="caixa1" to="." method="_on_caixa1_body_shape_entered"]
[connection signal="body_entered" from="caixa2" to="." method="_on_caixa2_body_entered"]
[connection signal="body_entered" from="caixa3" to="." method="_on_caixa3_body_entered"]
[connection signal="body_entered" from="Fim" to="." method="_on_Fim_body_entered"]
